--- a/index.html
+++ b/index.html
@@ -23,13 +23,7 @@
                   Anikait Singh
                 </p>
                 <p>
-                  I'm a first year Ph.D Student at Stanford AI. I was a student researcher at Google DeepMind Robotics, 
-                  based in Mountain View. My research is supported by the NSF Graduate Research Fellowship.
-                </p>
-                <p>
-                  Previously, I was at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
-                  <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a>, and <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a> 
-                  as part of BAIR working on Deep RL and Robot Learning.
+                  I'm a second year Ph.D Student at Stanford AI advised by <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a>. I closely collaborate with <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a>, <a href="https://thashim.github.io/">Tatsu Hashimoto</a>, and <a href="https://cs.stanford.edu/~ermon/">Stefano Ermon</a>. Previously, I was at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a> as part of BAIR working on Deep RL and Robot Learning. I was also a student researcher at Google DeepMind Robotics, and Toyota Research Institute. My research is supported by the NSF Graduate Research Fellowship.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:anikait@stanford.edu">Email</a> &nbsp;/&nbsp;
@@ -50,9 +44,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  My primary research interests are in decision-making methods such as reinforcement learning and scaling them up. 
-                  I believe that a good target of my research would be to produce foundation models for decision-making that utilize 
-                  large diverse data sources that show good generalization and enable rapid learning.
+                  My research focuses on advancing decision-making methodologies, particularly in reinforcement learning, and scaling these approaches to broader applications. I am particularly interested in multi-step reasoning in complex domains such as code and mathematics, as well as designing alignment algorithms and personalization techniques. My ultimate goal is to develop foundational models for decision-making that leverage diverse, large-scale datasets to achieve robust generalization, efficient rapid learning, and adaptability to individual needs.
                 </p>
               </td>
             </tr>
