--- a/index.html
+++ b/index.html
@@ -410,6 +410,16 @@
           <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="./static/images/stanford_logo.png" width="240" alt="csteaching">
+              </td>
+              <td width="75%" valign="center">
+                Graduate Student Instructor, <a href="https://cs224r.stanford.edu/">CS224r Spring 2025</a>
+                <br>
+                Program Coordinator, Mentor, <a href="https://deeplearningportal.org/">Deep Learning Portal 2024</a>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="./static/images/teaching.png" width="240" alt="csteaching">
               </td>
               <td width="75%" valign="center">
@@ -418,14 +428,6 @@
                 Undergraduate Student Instructor, <a href="https://inst.eecs.berkeley.edu/~cs188/sp22/">CS188 Spring 2022</a>
                 <br>
                 Undergraduate Student Instructor, <a href="https://rail.eecs.berkeley.edu/deeprlcourse-fa22/">CS285 Fall 2021</a>
-              </td>
-            </tr>
-            <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/stanford_logo.png" width="240" alt="csteaching">
-              </td>
-              <td width="75%" valign="center">
-                Program Coordinator, Mentor, <a href="https://deeplearningportal.org/">Deep Learning Portal 2024</a>
               </td>
             </tr>
           </tbody></table>
