--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   Anikait Singh
                 </p>
                 <p>
-                  I'm a second year Ph.D Student at Stanford AI advised by <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a>. I closely collaborate with <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a> and <a href="https://thashim.github.io/">Tatsu Hashimoto</a>. Previously, I was at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a> as part of BAIR working on Deep RL and Robot Learning. I was also a student researcher at Google DeepMind Robotics, and Toyota Research Institute. My research is supported by the NSF Graduate Research Fellowship.
+                  I'm a second year Ph.D Student at Stanford AI advised by <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a>. I closely collaborate with <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a> and <a href="https://thashim.github.io/">Tatsu Hashimoto</a>. Previously, I was at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>. I was also a student researcher at Google DeepMind Robotics, and Toyota Research Institute. My research is supported by the NSF Graduate Research Fellowship.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:anikait@stanford.edu">Email</a> &nbsp;/&nbsp;
@@ -54,15 +54,15 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/FSPO.jpg" alt="understanding_rlhf" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/FSPO.jpg" alt="understanding_rlhf" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2502.19312.pdf" id="understanding_rlhf_arxiv">
-                  <span class="papertitle">FSPO: Few-Shot Preference Optimization of Synthetic Preference Data in LLMs Elicits Effective Personalization to Real Users</span>
+                  <span class="papertitle">Few-Shot Preference Optimization of Synthetic Preferences Elicits Effective Personalization to Real Users</span>
                 </a>
                 <br>
-                <strong>Anikait Singh*</strong>, Sheryl Hsu*, Kyle Hsu, Eric Mitchell, Stefano Ermon, Tatsunori Hashimoto, Archit Sharma, Chelsea Finn
+                <strong>Anikait Singh*</strong>, Sheryl Hsu*, Kyle Hsu, Eric Mitchell, Tatsu Hashimoto, Archit Sharma, Chelsea Finn
                 <br>
                 <em>ACL</em>, 2025
                 <br>
@@ -76,8 +76,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/cog_behav.png" alt="understanding_rlhf" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/cog_behav.png" alt="understanding_rlhf" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2501.04682.pdf" id="understanding_rlhf_arxiv">
@@ -87,17 +87,40 @@
                 <br>
                 Kanishk Gandhi, Ayush Chakravarthy, <strong>Anikait Singh</strong>, Nathan Lile, Noah D. Goodman
                 <br>
+                <em>CoLM</em>, 2025
+                <br>
                 <a href="https://arxiv.org/pdf/2501.04682.pdf">paper</a> /
                 <a href="https://github.com/kanishkg/cognitive-behaviors">code</a> 
                 <p></p>
-                <p>This study demonstrates that a language model's intrinsic reasoning behaviors—such as verification, backtracking, subgoal setting, and backward chaining—are key to its ability to self-improve under reinforcement learning, as evidenced by Qwen naturally exhibiting these traits while Llama initially does not. By priming Llama with examples of proper reasoning patterns—even with incorrect answers—and further pretraining with targeted reasoning data, the model's performance substantially improves to match or exceed that of Qwen, underscoring the fundamental link between initial reasoning behaviors and effective model enhancement.
+                <p>This study demonstrates that a language model's intrinsic reasoning behaviors—such as verification, backtracking, subgoal setting, and backward chaining—are key to its ability to self-improve under reinforcement learning. By priming Llama with examples of proper reasoning patterns—even with incorrect answers—and further pretraining with targeted reasoning data, the model's performance substantially improves to match or exceed that of Qwen, underscoring the fundamental link between initial reasoning behaviors and effective model enhancement.
                 </p>
               </td>
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/metacot.png" alt="understanding_rlhf" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/backtrack.png" alt="understanding_rlhf" width="400" style="border-style: none">
+              </td>
+              <td width="75%" valign="middle">
+                <a href="https://openreview.net/pdf?id=ZXRKOAf7UX" id="understanding_rlhf_arxiv">
+                  <span class="papertitle">Improving Test-Time Search in LLMs with Backtracking Against In-Context Value Verifiers
+                  </span>
+                </a>
+                <br>
+                <strong>Anikait Singh</strong>, Kushal Arora, Sedrick Keh, Jean Mercat, Tatsunori Hashimoto, Chelsea Finn, Aviral Kumar
+                <br>
+                <em>ICLR</em>, 2025, Reasoning and Planning for LLMs, SSI-FM
+                <br>
+                <a href="https://openreview.net/pdf?id=ZXRKOAf7UX">paper</a>
+                <p></p>
+                <p>This paper introduces a novel approach combining process verifiers with preemptive backtracking to efficiently identify and resample problematic steps, significantly reducing computation through focused revisions and in-context process supervision.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/metacot.png" alt="understanding_rlhf" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2501.04682.pdf" id="understanding_rlhf_arxiv">
@@ -117,10 +140,31 @@
                 </p>
               </td>
             </tr>
+
+            <tr>
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/ppd.png" alt="understanding_rlhf" width="400" style="border-style: none">
+              </td>
+              <td width="75%" valign="middle">
+                <a href="https://arxiv.org/pdf/2501.06655.pdf" id="understanding_rlhf_arxiv">
+                  <span class="papertitle">Personalized Preference Fine-tuning of Diffusion Models</span>
+                </a>
+                <br>
+                Meihua Dang*, <strong>Anikait Singh*</strong>, Linqi Zhou, Stefano Ermon, Jiaming Song
+                <br>
+                <em>CVPR</em>, 2025
+                <br>
+                <a href="https://arxiv.org/pdf/2501.06655.pdf">paper</a> /
+                <a href="https://github.com/Asap7772/fewshot-preference-optimization">code</a>
+                <p></p>
+                <p>PPD is a multi-reward optimization approach that personalizes text-to-image diffusion models by extracting user preference embeddings from a few examples and incorporating them via cross-attention during DPO fine-tuning, enabling effective generalization to unseen users with as few as four preference examples.
+                </p>
+              </td>
+            </tr>
             
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/understanding_rlhf.jpeg" alt="understanding_rlhf" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/understanding_rlhf.jpeg" alt="understanding_rlhf" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2404.14367.pdf" id="understanding_rlhf_arxiv">
@@ -144,8 +188,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/d5rldomains.jpg" alt="understanding_rlhf" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/d5rldomains.jpg" alt="understanding_rlhf" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://openreview.net/pdf?id=Aj1wftldeR" id="understanding_rlhf_arxiv">
@@ -172,8 +216,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/VPTR.png" alt="workflow" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/VPTR.png" alt="workflow" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2309.13041.pdf" id="workflow_arxiv">
@@ -199,8 +243,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/RTX.png" alt="workflow" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/RTX.png" alt="workflow" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2310.08864.pdf" id="workflow_arxiv">
@@ -222,8 +266,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/RT2.png" alt="workflow" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/RT2.png" alt="workflow" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://robotics-transformer2.github.io/assets/rt2.pdf" id="workflow_arxiv">
@@ -246,8 +290,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/ReDS.png" alt="workflow" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/ReDS.png" alt="workflow" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2211.01052.pdf" id="workflow_arxiv">
@@ -269,8 +313,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/CALQL.jpeg" alt="workflow" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/CALQL.jpeg" alt="workflow" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2204.05618.pdf" id="workflow_arxiv">
@@ -298,8 +342,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/PTR.png" alt="workflow" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/PTR.png" alt="workflow" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2210.05178.pdf" id="workflow_arxiv">
@@ -325,8 +369,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/offlinerlvsbc.png" alt="workflow" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/offlinerlvsbc.png" alt="workflow" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2204.05618.pdf" id="workflow_arxiv">
@@ -349,8 +393,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/workflow.png" alt="workflow" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/workflow.png" alt="workflow" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://arxiv.org/pdf/2109.10813.pdf" id="workflow_arxiv">
@@ -373,8 +417,8 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/schepen.png" alt="workflow" width="240" style="border-style: none">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/schepen.png" alt="workflow" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
                 <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8818288" id="workflow_arxiv">
@@ -409,8 +453,8 @@
           </tbody></table>
           <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/stanford_logo.png" width="240" alt="csteaching">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/stanford_logo.png" width="400" alt="csteaching">
               </td>
               <td width="75%" valign="center">
                 Graduate Student Instructor, <a href="https://cs224r.stanford.edu/">CS224r Spring 2025</a>
@@ -419,8 +463,8 @@
               </td>
             </tr>
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="./static/images/teaching.png" width="240" alt="csteaching">
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/teaching.png" width="400" alt="csteaching">
               </td>
               <td width="75%" valign="center">
                 Undergraduate Student Instructor, <a href="https://rail.eecs.berkeley.edu/deeprlcourse-fa22/">CS285 Fall 2022</a>
