--- a/index.html
+++ b/index.html
@@ -143,6 +143,29 @@
 
             <tr>
               <td style="padding:20px;width:35%;vertical-align:middle">
+                <img src="./static/images/bigmath.png" alt="understanding_rlhf" width="400" style="border-style: none">
+              </td>
+              <td width="75%" valign="middle">
+                <a href="https://arxiv.org/pdf/2502.17387.pdf" id="understanding_rlhf_arxiv">
+                  <span class="papertitle">Big-Math: A Large-Scale, High-Quality Math Dataset for Reinforcement Learning in Language Models
+                  </span>
+                </a>
+                <br>
+                Alon Albalak, Duy Phung, Nathan Lile, Rafael Rafailov, Kanishk Gandhi, Louis Castricato, <strong>Anikait Singh</strong>, Chase Blagden, Violet Xiang, Dakota Mahan, Nick Haber
+                <br>
+                <em>CoLM</em>, 2025
+                <br>
+                <a href="https://arxiv.org/pdf/2502.17387.pdf">paper</a> /
+                <a href="https://www.synthlabs.ai/research/meta-chain-of-thought">blog</a>  /
+                <a href="https://huggingface.co/datasets/SynthLabsAI/Big-Math-RL-Verified">dataset</a>
+                <p></p>
+                <p>Big-Math is a dataset of over 250,000 high-quality, verifiable math questions created for reinforcement learning that bridges the gap between quality and quantity by rigorously filtering existing datasets and introducing 47,000 new reformulated questions, offering greater diversity and varying difficulty levels compared to commonly used alternatives like GSM8k and MATH.RetryClaude can make mistakes. Please double-check responses.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="padding:20px;width:35%;vertical-align:middle">
                 <img src="./static/images/ppd.png" alt="understanding_rlhf" width="400" style="border-style: none">
               </td>
               <td width="75%" valign="middle">
