--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <a href="https://www.synthlabs.ai/research/meta-chain-of-thought">blog</a>
                         <a href="https://huggingface.co/datasets/SynthLabsAI/Big-Math-RL-Verified">dataset</a>
                       </div>
-                      <p>Big-Math is a dataset of over 250,000 high-quality, verifiable math questions created for reinforcement learning that bridges the gap between quality and quantity by rigorously filtering existing datasets and introducing 47,000 new reformulated questions, offering greater diversity and varying difficulty levels compared to commonly used alternatives like GSM8k and MATH.RetryClaude can make mistakes. Please double-check responses.</p>
+                      <p>Big-Math is a dataset of over 250,000 high-quality, verifiable math questions created for reinforcement learning that bridges the gap between quality and quantity by rigorously filtering existing datasets and introducing 47,000 new reformulated questions, offering greater diversity and varying difficulty levels compared to commonly used alternatives like GSM8k and MATH.</p>
                     </div>
                   </div>
 
