--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         </a>
                         <div class="paper-meta">
                           Rafael Rafailov*, Kyle Beltran Hatch*, <strong>Anikait Singh</strong>, Aviral Kumar, 
-                          Laura Smith, Ilya Kostrikov, Philippe Hansen-Estruch, Victor Kolev, 
+                          Laura Smith, Ilya Kostrikov, Philippe Estruch, Victor Kolev, 
                           Philip J. Ball, Jiajun Wu, Sergey Levine, Chelsea Finn
                           <br>
                           <em>RCL</em>, 2024
@@ -260,9 +260,7 @@
                           <span class="papertitle"> Robotic Offline RL from Internet Videos via Value-Function Pre-Training</span>
                         </a>
                         <div class="paper-meta">
-                          Chethan Bhateja*, Derek Guo*, Dibya Ghosh*, <strong>Anikait Singh</strong>, Manan Tomar,
-                          <br>
-                          Quan Vuong, Yevgen Chebotar, Sergey Levine, Aviral Kumar
+                          Chethan Bhateja*, Derek Guo*, Dibya Ghosh*, <strong>Anikait Singh</strong>, Manan Tomar, Quan Vuong, Yevgen Chebotar, Sergey Levine, Aviral Kumar
                           <br>
                           <em>ICRA</em>, 2024
                         </div>
@@ -362,9 +360,7 @@
                           <span class="papertitle"> Cal-QL: Calibrated Offline RL Pre-Training for Efficient Online Fine-Tuning</span>
                         </a>
                         <div class="paper-meta">
-                          Mitsuhiko Nakamoto*, Yuexiang Zhai*, <strong>Anikait Singh</strong>, Max Sobol Mark, 
-                          <br>
-                          Yi Ma, Chelsea Finn, Aviral Kumar, Sergey Levine
+                          Mitsuhiko Nakamoto*, Yuexiang Zhai*, <strong>Anikait Singh</strong>, Max Sobol Mark, Yi Ma, Chelsea Finn, Aviral Kumar, Sergey Levine
                           <br>
                           <em>NeurIPS</em>, 2023
                         </div>
@@ -392,9 +388,7 @@
                           <span class="papertitle"> Pre-Training for Robots: Offline RL Enables Learning from a Handful of Trials</span>
                         </a>
                         <div class="paper-meta">
-                          Aviral Kumar*, <strong>Anikait Singh</strong>*, Frederik Ebert*, Mitsuhiko Nakamoto
-                          <br>
-                          Yanlai Yang, Chelsea Finn, Sergey Levine
+                          Aviral Kumar*, <strong>Anikait Singh</strong>*, Frederik Ebert*, Mitsuhiko Nakamoto, Yanlai Yang, Chelsea Finn, Sergey Levine
                           <br>
                           <em>RSS</em>, 2023
                         </div>
