--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <div class="paper-meta">
                           <strong>Anikait Singh</strong>, Kushal Arora, Sedrick Keh, Tatsunori Hashimoto, Chelsea Finn, Aviral Kumar
                           <br>
-                          <em>ICLR</em>, 2025, Reasoning and Planning for LLMs
+                          <em>ICLR</em>, 2025, Workshop on Reasoning and Planning for LLMs (Oral Presentation)
                         </div>
                         <div class="paper-links">
                           <a href="https://openreview.net/pdf?id=ZXRKOAf7UX">paper</a>
