--- a/index.html
+++ b/index.html
@@ -102,14 +102,34 @@
                           <span class="papertitle">Improving Test-Time Search in LLMs with Backtracking Against In-Context Value Verifiers</span>
                         </a>
                         <div class="paper-meta">
-                          <strong>Anikait Singh</strong>, Kushal Arora, Sedrick Keh, Tatsunori Hashimoto, Chelsea Finn, Aviral Kumar
+                          <strong>Anikait Singh</strong>, Kushal Arora, Sedrick Keh, Jean Mercat, Tatsunori Hashimoto, Chelsea Finn, Aviral Kumar
                           <br>
-                          <em>ICLR</em>, 2025, Workshop on Reasoning and Planning for LLMs (Oral Presentation)
+                          <em>ICLR</em>, 2025, Workshop on Reasoning and Planning for LLMs (<strong>Runner-Up Best Paper</strong>)
                         </div>
                         <div class="paper-links">
                           <a href="https://openreview.net/pdf?id=ZXRKOAf7UX">paper</a>
                         </div>
                         <p>This paper introduces a novel approach combining process verifiers with preemptive backtracking to efficiently identify and resample problematic steps, significantly reducing computation through focused revisions and in-context process supervision.</p>
+                      </div>
+                    </div>
+
+                    <div class="paper-card">
+                      <div class="paper-image">
+                        <img src="./static/images/hyre.png" alt="understanding_rlhf" width="400" style="border-style: none">
+                      </div>
+                      <div class="paper-content">
+                        <a href="https://arxiv.org/pdf/2412.08812" id="understanding_rlhf_arxiv">
+                          <span class="papertitle">Test-Time Alignment via Hypothesis Reweighting</span>
+                        </a>
+                        <div class="paper-meta">
+                          Yoonho Lee, Jonathan Williams, Henrik Marklund, Archit Sharma, Eric Mitchell, <strong>Anikait Singh</strong>, Chelsea Finn
+                          <br>
+                          <em>Preprint</em>, 2024
+                        </div>
+                        <div class="paper-links">
+                          <a href="https://arxiv.org/pdf/2412.08812">paper</a>
+                        </div>
+                        <p>We introduce HyRe, a test-time adaptation framework that trains a single neural network with multiple prediction heads—each encoding a different behavior consistent with the training data—and dynamically reweights them using a small set of labeled examples from the target distribution. With only five preference pairs per distribution, HyRe scales to large pretrained models at roughly the cost of fine-tuning one model and outperforms prior state-of-the-art 2B-parameter reward models across 18 personalization and distribution-shift scenarios.</p>
                       </div>
                     </div>
 
@@ -188,6 +208,8 @@
                         </a>
                         <div class="paper-meta">
                           Rohin Manvi, <strong>Anikait Singh</strong>, Stefano Ermon
+                          <br>
+                          <em>Preprint</em>, 2024
                         </div>
                         <div class="paper-links">
                           <a href="https://arxiv.org/pdf/2410.02725">paper</a> 
@@ -235,7 +257,7 @@
                           Laura Smith, Ilya Kostrikov, Philippe Estruch, Victor Kolev, 
                           Philip J. Ball, Jiajun Wu, Sergey Levine, Chelsea Finn
                           <br>
-                          <em>RCL</em>, 2024
+                          <em>RLC</em>, 2024
                         </div>
                         <div class="paper-links">
                           <a href="https://sites.google.com/view/d5rl/">project page</a> /
@@ -441,7 +463,7 @@
                         <div class="paper-meta">
                           Aviral Kumar*, <strong>Anikait Singh*</strong>, Stephen Tian, Chelsea Finn, Sergey Levine
                           <br>
-                          <em>CoRL</em>, 2021, <em>(Oral Presentation)</em>
+                          <em>CoRL</em>, 2021, <strong>(Oral Presentation)</strong>
                         </div>
                         <div class="paper-links">
                           <a href="https://sites.google.com/view/offline-rl-workflow">project page</a> /
@@ -469,7 +491,8 @@
                           IEEE Journal of Translational Engineering in Health and Medicine, 2019
                         </div>
                         <div class="paper-links">
-                          <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8818288">paper</a>
+                          <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8818288">paper</a> /
+                          <a href="https://play.google.com/store/apps/details?id=edu.harvard.meei.supervisionsearch&hl=en_US">app</a>
                         </div>
                         <p>
                           System to help visually-impaired patients localize where words are present in a cluttered environment. This system 
