--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
                   <div class="papers-grid">
                     <div class="paper-card">
                       <div class="paper-image">
+                        <img src="./static/images/abstractions.png" alt="understanding_rlhf" width="400" style="border-style: none">
+                      </div>
+                      <div class="paper-content">
+                        <a href="https://arxiv.org/pdf/2502.19312.pdf" id="understanding_rlhf_arxiv">
+                          <span class="papertitle">Learning to Discover Abstractions for LLM Reasoning</span>
+                        </a>
+                        <div class="paper-meta">
+                          Yuxiao Qu*, <strong>Anikait Singh*</strong>, Yoonho Lee*, Amrith Setlur, Ruslan Salakhutdinov, Chelsea Finn, Aviral Kumar
+                          <br>
+                          <em>Spotlight at ES-FoMo Workshop, ICML 2025</em>
+                        </div>
+                        <div class="paper-links">
+                          <a href="./static/pdf/abstractions.pdf">paper</a> 
+                        </div>
+                        <p>A two-agent training framework for generating and applying reasoning abstractions to solve complex problems.</p>
+                      </div>
+                    </div>
+
+                    <div class="paper-card">
+                      <div class="paper-image">
                         <img src="./static/images/FSPO.jpg" alt="understanding_rlhf" width="400" style="border-style: none">
                       </div>
                       <div class="paper-content">
