--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <img src="./static/images/abstractions.png" alt="understanding_rlhf" width="400" style="border-style: none">
                       </div>
                       <div class="paper-content">
-                        <a href="https://arxiv.org/pdf/2502.19312.pdf" id="understanding_rlhf_arxiv">
+                        <a href="./static/pdf/abstractions.pdf" id="understanding_rlhf_arxiv">
                           <span class="papertitle">Learning to Discover Abstractions for LLM Reasoning</span>
                         </a>
                         <div class="paper-meta">
