--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="paper-links">
                           <a href="./static/pdf/abstractions.pdf">paper</a> 
                         </div>
-                        <p>A two-agent training framework for generating and applying reasoning abstractions to solve complex problems.</p>
+                        <p>This paper presents RL for Abstraction Discovery (RLAD), a multi-agent RL method for LLMs to discovers novel "reasoning abstractions" to guide problem solving. This approach can improve the diversity of reasoning strategies explored and steer solution-generators towards useful parts of the solution space for harder problem settings where exploration is required.</p>
                       </div>
                     </div>
 
