--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   Anikait Singh
                 </p>
                 <p>
-                  I'm a second year Ph.D Student at Stanford AI advised by <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a> and <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a> and a research scientist intern at Microsoft Research NYC. Previously, I was at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>. I was also a student researcher at Google DeepMind Robotics and Toyota Research Institute. My research is supported by the NSF Graduate Research Fellowship.
+                  I'm a second year Ph.D Student at Stanford AI advised by <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a> and <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a> and a research scientist intern at Microsoft Research NYC. Previously, I was at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>. I was also a student researcher at Google DeepMind Robotics and Toyota Research Institute (TRI). My research is supported by the NSF Graduate Research Fellowship.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:anikait@stanford.edu">Email</a> &nbsp;/&nbsp;
