--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="card">
                   <h2>Research</h2>
                   <p>
-                    My research focuses on advancing decision-making methodologies, particularly in reinforcement learning, and scaling these approaches to broader applications. I am particularly interested in multi-step reasoning in complex domains such as code and mathematics, as well as designing alignment algorithms and personalization techniques. My ultimate goal is to develop foundational models for decision-making that leverage diverse, large-scale datasets to achieve robust generalization, efficient rapid learning, and adaptability to individual needs.
+                    My research aims to understand and tackle the core bottlenecks in applying reinforcement learning to foundation models. I investigate this intersection of data and algorithms through two key questions: (1) How can we design simple, scalable, and predictable learning objectives for RL fine-tuning? and (2) How can we systematically curate data distributions to teach models dynamic, adaptive behaviors that supervised methods alone cannot? I explore these questions across a range of domains, from teaching procedural reasoning in mathematics and coding to enabling interaction in robotics and agent-based systems, and developing personalized, preference-aligned models.
                   </p>
                   
                   <div class="papers-grid">
