--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="card">
                   <h2>Research</h2>
                   <p>
-                    My research aims to understand and tackle the core bottlenecks in applying reinforcement learning to foundation models. I investigate this intersection of data and algorithms through two key questions: (1) How can we design simple, scalable, and predictable learning objectives for RL fine-tuning? and (2) How can we systematically curate data distributions to teach models dynamic, adaptive behaviors that supervised methods alone cannot? I explore these questions across a range of domains, from teaching procedural reasoning in mathematics and coding to enabling interaction in robotics and agent-based systems, and developing personalized, preference-aligned models.
+                    My research aims to understand and tackle the core bottlenecks in scaling reinforcement learning to foundation models. I investigate this through the intersection of data and algorithms in two key questions: (1) How can we design simple, scalable, and predictable learning objectives for RL fine-tuning? and (2) Can we systematically curate data distributions to teach models dynamic, adaptive behaviors that supervised methods alone cannot? I explore these questions across a range of domains, from reasoning in mathematics and coding to enabling interaction in robotics and agent-based systems, and developing personalized, preference-aligned models.
                   </p>
                   
                   <div class="papers-grid">
