--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                   <a href="./static/pdf/resume.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=lPaISmIAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/Anikait_Singh_">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/asap7772/">Github</a>
+                  <a href="https://github.com/asap7772/">Github</a> &nbsp;/&nbsp;
+                  <a href="https://www.admonymous.co/asap7772">Anonymous Feedback</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -62,6 +63,7 @@
                           Yuxiao Qu*, <strong>Anikait Singh*</strong>, Yoonho Lee*, Amrith Setlur, Ruslan Salakhutdinov, Chelsea Finn, Aviral Kumar
                           <br>
                           <em>Spotlight at ES-FoMo Workshop, ICML 2025</em>
+                          <em>Oral at Ram2 Workshop, CoLM 2025</em>
                         </div>
                         <div class="paper-links">
                           <a href="./static/pdf/abstractions.pdf">paper</a> 
@@ -103,7 +105,7 @@
                         <div class="paper-meta">
                           Kanishk Gandhi, Ayush Chakravarthy, <strong>Anikait Singh</strong>, Nathan Lile, Noah D. Goodman
                           <br>
-                          <em>CoLM</em>, 2025
+                          <em>CoLM</em>, 2025, <strong>(Oral Presentation)</strong>
                         </div>
                         <div class="paper-links">
                           <a href="https://arxiv.org/pdf/2503.01307.pdf">paper</a> /
