--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="paper-meta">
                           <strong>Anikait Singh*</strong>, Sheryl Hsu*, Kyle Hsu, Eric Mitchell, Tatsu Hashimoto, Archit Sharma, Chelsea Finn
                           <br>
-                          <em>ACL</em>, 2025
+                          <em>DataWorld Workshop, ICML 2025</em>
                         </div>
                         <div class="paper-links">
                           <a href="https://fewshot-preference-optimization.github.io/">project page</a> /
