--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   Anikait Singh
                 </p>
                 <p>
-                  I'm a second year Ph.D Student at Stanford AI advised by <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a> and <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a> and a research scientist intern at Microsoft Research NYC. Previously, I was at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>. I was also a student researcher at Google DeepMind Robotics and Toyota Research Institute. My research is supported by the NSF Graduate Research Fellowship.
+                  I'm a third year Ph.D Student at Stanford AI advised by <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a> and <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a>. Previously, I was at UC Berkeley advised by <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>. I was a research scientist intern at Microsoft Research NYC, Google DeepMind Robotics and Toyota Research Institute. My research is supported by the NSF Graduate Research Fellowship.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:anikait@stanford.edu">Email</a> &nbsp;/&nbsp;
@@ -33,6 +33,7 @@
                   <a href="https://scholar.google.com/citations?user=lPaISmIAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/Anikait_Singh_">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/asap7772/">Github</a> &nbsp;/&nbsp;
+                  <a href="https://www.goodreads.com/user/show/42866068?ref=nav_profile_l">Goodreads</a> &nbsp;/&nbsp;
                   <a href="https://www.admonymous.co/asap7772">Anonymous Feedback</a>
                 </p>
               </td>
@@ -56,8 +57,8 @@
                         <img src="./static/images/abstractions.png" alt="understanding_rlhf" width="400" style="border-style: none">
                       </div>
                       <div class="paper-content">
-                        <a href="./static/pdf/abstractions.pdf" id="understanding_rlhf_arxiv">
-                          <span class="papertitle">Learning to Discover Abstractions for LLM Reasoning</span>
+                        <a href="https://arxiv.org/abs/2510.02263" id="understanding_rlhf_arxiv">
+                          <span class="papertitle">Training LLMs to Discover Abstractions for Solving Reasoning Problems</span>
                         </a>
                         <div class="paper-meta">
                           Yuxiao Qu*, <strong>Anikait Singh*</strong>, Yoonho Lee*, Amrith Setlur, Ruslan Salakhutdinov, Chelsea Finn, Aviral Kumar
@@ -66,7 +67,9 @@
                           <em>Oral at Ram2 Workshop, CoLM 2025</em>
                         </div>
                         <div class="paper-links">
-                          <a href="./static/pdf/abstractions.pdf">paper</a> 
+                          <a href="./static/pdf/abstractions.pdf">paper</a>  /
+                          <a href="https://cohenqu.github.io/rlad.github.io/">website</a> /
+                          <a href="https://huggingface.co/datasets/CMU-AIRe/RLAD-abstractions-benchmarks">dataset</a>
                         </div>
                         <p>This paper presents RL for Abstraction Discovery (RLAD), a multi-agent RL method for LLMs to discovers novel "reasoning abstractions" to guide problem solving. This approach can improve the diversity of reasoning strategies explored and steer solution-generators towards useful parts of the solution space for harder problem settings where exploration is required.</p>
                       </div>
@@ -112,6 +115,27 @@
                           <a href="https://github.com/kanishkg/cognitive-behaviors">code</a>
                         </div>
                         <p>This study demonstrates that a language model's intrinsic reasoning behaviors—such as verification, backtracking, subgoal setting, and backward chaining—are key to its ability to self-improve under reinforcement learning.</p>
+                      </div>
+                    </div>
+
+                    <div class="paper-card">
+                      <div class="paper-image">
+                        <img src="./static/images/mlesmith.png" alt="understanding_rlhf" width="400" style="border-style: none">
+                      </div>
+                      <div class="paper-content">
+                        <a href="https://arxiv.org/abs/2510.02263" id="understanding_rlhf_arxiv">
+                          <span class="papertitle">MLE-Smith: Scaling MLE Tasks with Automated Multi-Agent Pipeline</span>
+                        </a>
+                        <div class="paper-meta">
+                          Rushi Qiang, Yuchen Zhuang, <strong>Anikait Singh</strong>, Percy Liang, Chao Zhang, Sherry Yang, Bo Dai
+                          <br>
+                          <em>Preprint</em>, 2025
+                        </div>
+                        <div class="paper-links">
+                          <a href="https://arxiv.org/abs/2510.02263">paper</a> /
+                          <a href="https://huggingface.co/papers/2510.07307">code</a>
+                        </div>
+                        <p>This paper introduces MLE-Smith, a fully automated multi-agent generate–verify–execute pipeline that converts raw datasets into competition-style MLE tasks by combining structured task generation (Brainstormer/Designer/Refactor), hybrid verification (deterministic checks + agent review), and execution-based validation to ensure structural integrity, semantic soundness, and empirical solvability at scale.<p>
                       </div>
                     </div>
 
